# JDEV2015

install/installSimpleVTK/apk/: AndroidManifest.xml  build.gradle  build.xml  local.properties
src/: cmake_script.sh
src/cmake/: ant_build.cmake  build.gradle  droid_apk.cmake  droid_builder.cmake.in  droid_config.cmake  droid_setup.cmake  gradle_build.cmake  signing.properties
src/native-activity/: CMakeLists.txt
src/native-activity/jni/: CMakeLists.txt
src/teapot/jni/: CMakeLists.txt
src/teapot/src/com/jdev2015/teapot/: TeapotNativeActivity.java
src/tuto01NativeActivity/correction/: AndroidManifest.xml
src/tuto01NativeActivity/src/: CMakeLists.txt
src/tuto01NativeActivity/src/jni/: CMakeLists.txt
src/tuto02SimpleEGL/correction/: AndroidManifest.xml  CMakeLists.txt
src/tuto02SimpleEGL/correction/src/com/jdev2015/helper/: NDKHelper.java
src/tuto02SimpleEGL/correction/src/com/jdev2015/teapot/: TeapotApplication.java  TeapotNativeActivity.java  untitled.xml
src/tuto02SimpleEGL/src/: CMakeLists.txt
src/tuto02SimpleEGL/src/jni/: TeapotNativeActivity.cpp
src/tuto03SimpleVTK/correction/jni/: CMakeLists.txt  main.cxx
src/tuto03SimpleVTK/correction/jni/JNIHelper/: JNIHelper.cpp
src/tuto03SimpleVTK/src/: CMakeLists.txt
src/tuto03SimpleVTK/src/jni/: CMakeLists.txt  main.cxx
src/tuto03SimpleVTK/src/jni/JNIHelper/: JNIHelper.hpp
src/tuto03SimpleVTK/src/res/layout/: activity_launcher.xml
src/tuto03SimpleVTK/src/src/com/jdev2015/NativeVTK/: LauncherActivity.java
src/tuto04AdvancedVTK/src/res/layout/: activity_logos.xml  activity_param.xml
src/tuto04AdvencedVTK/src/: AndroidManifest.xml  CMakeLists.txt
src/tuto04AdvencedVTK/src/jni/: CMakeLists.txt  main.cxx
src/tuto04AdvencedVTK/src/res/layout/: activity_objects.xml  activity_param.xml  activity_slider.xml
src/tuto04AdvencedVTK/src/src/com/jdev2015/NativeVTK/: LauncherActivity.java
src/tuto04AdvencedVTK/src/src/com/jdev2015/widget/: VerticalSeekBar.java
src/tuto05Bazel/src/: AndroidManifest.xml  BUILD  BUILD.deps  build.sh
src/tuto05Bazel/src/src/com/jdev2015/NativeVTK/: LauncherActivity.java
src/tutoSimpleVTK/: AndroidManifest.xml  CMakeLists.txt
src/tutoSimpleVTK/src/com/jdev2015/NativeVTK/: LauncherActivity.java
